--- a/VlineTimetable/pom.xml
+++ b/VlineTimetable/pom.xml
@@ -16,18 +16,6 @@
 	    </dependency>
 	    
 	    <dependency>
-	    	<groupId>com.jcraft</groupId>
-	    	<artifactId>jsch</artifactId>
-	    	<version>0.1.47</version>
-	    </dependency>
-	    
-	    <dependency>
-	        <groupId>com.jcraft</groupId>
-	        <artifactId>jzlib</artifactId>
-	        <version>1.0.7</version>
-	    </dependency>
-
-	    <dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
 			<version>4.0.1</version>
@@ -39,6 +27,12 @@
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpcore</artifactId>
 			<version>4.0.1</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>commons-lang</groupId>
+		    <artifactId>commons-lang</artifactId>
+		    <version>2.6</version>
 		</dependency>
 		
 		<dependency>
