--- a/VlineTimetable/pom.xml
+++ b/VlineTimetable/pom.xml
@@ -16,6 +16,12 @@
 	    </dependency>
 	    
 	    <dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1</version>
+		</dependency>
+		
+	    <dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
 			<version>4.0.1</version>
