--- a/VlineTimetable/src/test/resources/log4j.properties
+++ b/VlineTimetable/src/test/resources/log4j.properties
@@ -4,5 +4,6 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%5p [%c] %m%n
 
-log4j.logger.org.apache.http=DEBUG
+log4j.logger.org.apache.http=ERROR
 log4j.logger.org.apache.http.wire=ERROR
+log4j.logger.com.pellcorp.ptv.http=DEBUG
