--- a/VlineTimetableApk/pom.xml
+++ b/VlineTimetableApk/pom.xml
@@ -19,11 +19,11 @@
 		</dependency>
  
 		<dependency>
-			<groupId>org.acra</groupId>
-			<artifactId>acra</artifactId>
-			<version>4.3.0-SNAPSHOT</version>
+			<groupId>com.pellcorp.android</groupId>
+			<artifactId>VlineTimetable</artifactId>
+			<version>${project.version}</version>
 		</dependency>
-
+		
 		<dependency>
 			<groupId>com.pellcorp.android</groupId>
 			<artifactId>VlineTimetable</artifactId>
@@ -73,7 +73,7 @@
 			<plugin>
 				<groupId>com.jayway.maven.plugins.android.generation2</groupId>
 				<artifactId>android-maven-plugin</artifactId>
-				<version>3.1.1</version>
+				<version>3.9.0-rc.2</version>
 
 				<configuration>
 					<sdk>
@@ -94,8 +94,7 @@
 						<configuration>
 							<manifest>
 								<versionName>${project.version}</versionName>
-								<versionCodeUpdateFromVersion>true
-								</versionCodeUpdateFromVersion>
+								<versionCodeUpdateFromVersion>true</versionCodeUpdateFromVersion>
 							</manifest>
 						</configuration>
 					</execution>
