--- a/VlineTimetable/pom.xml
+++ b/VlineTimetable/pom.xml
@@ -10,12 +10,6 @@
 	
 	<dependencies>
 	    <dependency>
-			<groupId>com.googlecode.json-simple</groupId>
-			<artifactId>json-simple</artifactId>
-			<version>1.1</version>
-		</dependency>
-		
-	    <dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
 			<version>4.0.1</version>
@@ -40,6 +34,12 @@
 			<artifactId>commons-logging</artifactId>
 			<version>1.1.1</version>
 			<scope>provided</scope>
+		</dependency>
+		
+		<dependency>
+		    <groupId>com.jayway.jsonpath</groupId>
+		    <artifactId>json-path</artifactId>
+		    <version>0.9.1</version>
 		</dependency>
 		
 		<dependency>
@@ -88,6 +88,13 @@
 			<artifactId>log4j</artifactId>
 			<version>1.2.16</version>
 			<scope>test</scope>
+		</dependency>
+		
+		<dependency>
+		    <groupId>com.jayway.jsonpath</groupId>
+		    <artifactId>json-path-assert</artifactId>
+		    <version>0.9.1</version>
+		    <scope>test</scope>
 		</dependency>
 	</dependencies>
 	
