--- a/pom.xml
+++ b/pom.xml
@@ -5,23 +5,16 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
+	<parent>
+		<groupId>com.pellcorp.android</groupId>
+		<artifactId>parent</artifactId>
+		<version>0.0.1</version>
+	</parent>
+	
 	<modules>
 		<module>VlineTimetable</module>
 		<module>VlineTimetableApk</module>
 	</modules>
-
-	<build>
-		<plugins>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
-				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
 	
 	<scm>
 		<developerConnection>scm:git:http://github.com/pellcorp/VlineTimetable</developerConnection>
